Small fix to have the dropdown menu in mobile view be with yellowish background, but not the inner block of the menu bar in non-mobile view.

--- a/Module3Assignment/css/style.css
+++ b/Module3Assignment/css/style.css
@@ -2,6 +2,8 @@
 	background-color: #55CCCC;
 	margin: 15px;
 }
-#dropdownMenuMobile {
-	background-color: #CCCC55;
+@media (max-width: 768px){
+	#dropdownMenuMobile {
+		background-color: #CCCC55;
+	}	
 }
