--- a/Module3Assignment/css/style.css
+++ b/Module3Assignment/css/style.css
@@ -2,6 +2,9 @@
 	background-color: #55CCCC;
 	margin: 15px;
 }
+.menuItem:hover {
+	background-color: #CC55CC;
+}
 @media (max-width: 768px){
 	#dropdownMenuMobile {
 		background-color: #CCCC55;
